env config step

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -7,15 +7,15 @@ APP_SECRET=meetappservernode
 
 # PostgreSQL
 
-DB_HOST=
-DB_USER=
-DB_PASS=
-DB_NAME=
+DB_HOST=postgres
+DB_USER=postgres
+DB_PASS=docker
+DB_NAME=meetapp
 POSTGRES_DB=meetapp
 
 # Redis
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PORT=6379
 
 # Mongo
