--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,15 +4,14 @@ services:
     image: "redis:alpine"
     ports:
       - "6379:6379"
-    env_file:
-      - .env
 
   postgres:
-    image: "postgres:latest"
+    image: "postgres:alpine"
     ports:
       - "5432:5432"
-    env_file:
-      - .env
+    environment:
+      - POSTGRES_PASSWORD=docker
+      - POSTGRES_DB=meetapp
 
   web:
     build: .
