--- a/mobile/ios/Podfile
+++ b/mobile/ios/Podfile
@@ -1,9 +1,8 @@
 platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-target 'meetappmobile' do
-  # Pods for meetappmobile
-  pod 'RNDateTimePicker', :path => '../node_modules/@react-native-community/datetimepicker/RNDateTimePicker.podspec'
+target 'mobile' do
+  # Pods for mobile
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
@@ -36,7 +35,7 @@ target 'meetappmobile' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
-  target 'meetappmobileTests' do
+  target 'mobileTests' do
     inherit! :search_paths
     # Pods for testing
   end
@@ -44,10 +43,10 @@ target 'meetappmobile' do
   use_native_modules!
 end
 
-target 'meetappmobile-tvOS' do
-  # Pods for meetappmobile-tvOS
+target 'mobile-tvOS' do
+  # Pods for mobile-tvOS
 
-  target 'meetappmobile-tvOSTests' do
+  target 'mobile-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
