--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "express": "latest",
     "express-async-errors": "^3.1.1",
     "express-handlebars": "^3.1.0",
+    "ioredis": "^4.14.1",
     "jsonwebtoken": "latest",
     "multer": "^1.4.2",
     "nodemailer": "^6.3.0",
