--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,8 @@
     "dotenv": "^8.1.0",
     "express": "latest",
     "express-async-errors": "^3.1.1",
+    "express-brute": "^1.0.1",
+    "express-brute-redis": "^0.0.1",
     "express-handlebars": "^3.1.0",
     "ioredis": "^4.14.1",
     "jsonwebtoken": "latest",
