--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
     "express-brute": "^1.0.1",
     "express-brute-redis": "^0.0.1",
     "express-handlebars": "^3.1.0",
+    "helmet": "^3.21.2",
     "ioredis": "^4.14.1",
     "jsonwebtoken": "latest",
     "multer": "^1.4.2",
